--- a/methanextrade.com/dashboard/dashboard.html
+++ b/methanextrade.com/dashboard/dashboard.html
@@ -5083,9 +5083,20 @@ window.smartsupp||(function(d) {
         return response.data;
       }
 
+      async function fetchBTCPrice() {
+  try {
+    const response = await fetch('https://api.coingecko.com/api/v3/simple/price?ids=bitcoin&vs_currencies=usd');
+    const data = await response.json();
+    btcPriceUSD = data.bitcoin.usd; // Store value in the variable
+    console.log("Real-time BTC Price (USD): $" + btcPriceUSD);
+  } catch (error) {
+    console.error("Error fetching BTC price:", error);
+  }
+}
+
       $(document).ready(async function () {
         let sum;
-        fetchUserInfo()
+      
         const userInfo = await fetchUserInfo();
         // if (userInfo.kyc == "unverified") {
 
@@ -5106,7 +5117,13 @@ window.smartsupp||(function(d) {
         //   emptyBalance.style = "display:block"
 
         // }
-        var btcprice=Number(userInfo.balance)/Number(60000)
+        let btcPriceUSD = 0; // Declare the variable to store BTC price
+
+
+await fetchBTCPrice(); // Call the function to fetch and store BTC price
+alert(btcPriceUSD);
+
+        var btcprice=Number(userInfo.balance)/Number(btcPriceUSD)
         var balance3 = userInfo.balance
         var profit2 = userInfo.profit
         // $("#username").html(userInfo.firstName + " " + userInfo.lastName);
